Fix ticket information on small screens

--- a/_sass/_boxes.scss
+++ b/_sass/_boxes.scss
@@ -225,4 +225,8 @@ ul.committee {
       text-decoration: underline;
     }
   }
+
+  @include media("<=small") {
+    width: 96%;
+  }
 }
